fix: image imports
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/blog/2024-11-25-self-managed-vs-cloud-vs-byoc.mdx
+++ b/src/content/blog/2024-11-25-self-managed-vs-cloud-vs-byoc.mdx
@@ -86,7 +86,7 @@ The Self-Managed model suits companies that value total control over their softw
 
 Here's a deployment model quadrant that helps organize the relationship between customer control and infrastructure management, essentially, the balancing act needed to determine the most suitable deployment method for a given use case.
 
-![Quadrant](/src/assets/blog/2024-11-25-self-managed-vs-cloud-vs-byoc/quadrant.jpg)
+![Quadrant](../../assets/blog/2024-11-25-self-managed-vs-cloud-vs-byoc/quadrant.jpg)
 
 ## Deployment target environments
 
@@ -116,7 +116,7 @@ To avoid "locking in" to a single cloud provider, many organizations adopt hybri
 
 Some software customers choose to deploy to privately owned data centers. While this is the most cumbersome, costly, and labor-intensive option, it offers the highest level of flexibility and privacy.
 
-![deployment-model-diagram](/src/assets/blog/2024-11-25-self-managed-vs-cloud-vs-byoc/self-managed-graph.png)
+![deployment-model-diagram](../../assets/blog/2024-11-25-self-managed-vs-cloud-vs-byoc/self-managed-graph.png)
 
 Apart from the SaaS deployment model, which is always vendor-owned and controlled, the other two models can be deployed to any target environment. It's up to the customer to determine the appropriate environment based on any specific restrictions or requirements.
 
