--- a/src/content/blog/2025-02-25-distr-v2-release.mdx
+++ b/src/content/blog/2025-02-25-distr-v2-release.mdx
@@ -41,13 +41,20 @@ If you don't see the feature yet, reach out, and we'll enable it for you. Once y
 
 The customer can now access and deploy the assigned application version/s directly from their customer portal.
 
-![license-panel](/src/assets/blog/2025-02-25-distr-v1-2/license-panel.png)
+![license-panel](../../assets/blog/2025-02-25-distr-v1-2/license-panel.png)
 
 > Docker registry authentication: If your application artifacts are stored in a private OCI registry, you can use the license as the authentication method to grant customer access. In the license configuration panel add the credentials needed to unlock the specified application versions.
 
 Check out the Licensing video:
 
-<iframe width="100%" height="400" src="https://www.youtube.com/embed/qh-ewkWxRj4" title="Distr Licensing" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe
+  width="100%"
+  height="400"
+  src="https://www.youtube.com/embed/qh-ewkWxRj4"
+  title="Distr Licensing"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen></iframe>
 
 Want to access the Beta Licensing feature? Request access at support@glasskube.com
 
