--- a/src/content/blog/container-image-registry-comparison.mdx
+++ b/src/content/blog/container-image-registry-comparison.mdx
@@ -104,7 +104,7 @@ But they often come with limited user interfaces, access control options, and an
 
 ### Azure Container Registry (ACR)
 
-![ACR](/src/assets/blog/2025-04-07-registry-comparison/acr.png)
+![ACR](../../assets/blog/2025-04-07-registry-comparison/acr.png)
 
 [Azure Container Registry (ACR)](https://azure.microsoft.com/en-us/products/container-registry) allows users to store artifacts either in a default global namespace or organize them more granularly using the supported repository structure.
 Thanks to Microsoft's scale, ACR comes with some compelling features like global image replication and built-in automation for building and patching images.
@@ -120,7 +120,7 @@ There's also support for vulnerability scanning, apparently via an integration w
 
 ### AWS Elastic Container Registry (ECR)
 
-![ECR](/src/assets/blog/2025-04-07-registry-comparison/ecr.png)
+![ECR](../../assets/blog/2025-04-07-registry-comparison/ecr.png)
 
 [Amazon Elastic Container Registry (ECR)](https://aws.amazon.com/ecr/) supports both private and public repositories, integrating nicely with AWS services.
 ECR features include lifecycle policies for image management, automated vulnerability scanning, immutable tags, and cross-region replication.
@@ -136,7 +136,7 @@ It's ideal for AWS-centric workflows, offering high availability and durability 
 
 ### Google Artifacts Registry (GCR)
 
-![gcr](/src/assets/blog/2025-04-07-registry-comparison/gcr.png)
+![gcr](../../assets/blog/2025-04-07-registry-comparison/gcr.png)
 
 [Google Artifact Registry](https://cloud.google.com/artifact-registry/docs) is the successor to Google Container Registry, offering a unified platform for managing both container images and non-container artifacts like Maven, npm, and OS packages.
 It integrates with Google Cloud services (e.g., Cloud Build, Deploy, GKE) and supports fine-grained access via IAM, CMEK encryption, and regional or multi-regional setups.
@@ -151,7 +151,7 @@ It integrates with Google Cloud services (e.g., Cloud Build, Deploy, GKE) and su
 
 ### Oracle Container Registry (OCR)
 
-![Oracle Container registry](/src/assets/blog/2025-04-07-registry-comparison/ocr.png)
+![Oracle Container registry](../../assets/blog/2025-04-07-registry-comparison/ocr.png)
 
 [Oracle Container Registry](https://docs.oracle.com/en-us/iaas/Content/Registry/Concepts/registryoverview.html) is a managed service for storing and sharing container images, with support for public and private repos.
 It integrates with Oracle Cloud IAM for access control, supports multi-architecture images, and offers high availability via replication.
@@ -164,7 +164,7 @@ Best suited for Oracle Cloud users, it works seamlessly with tools like Kubernet
 
 ### JFrog Artifactory
 
-![jfrog](/src/assets/blog/2025-04-07-registry-comparison/jfrog.png)
+![jfrog](../../assets/blog/2025-04-07-registry-comparison/jfrog.png)
 
 [JFrog Artifactory](https://jfrog.com/artifactory/) is without a doubt a huge player in the registry product catalog, being both a registry and a universal repository manager, supporting 30+ package formats.
 
@@ -191,7 +191,7 @@ Artifactory includes enterprise-grade features like OCI v1.1 compliance, a propr
 
 ### GitLab Container Registry
 
-![gitlab](/src/assets/blog/2025-04-07-registry-comparison/gitlab-cr.png)
+![gitlab](../../assets/blog/2025-04-07-registry-comparison/gitlab-cr.png)
 
 [GitLab Container Registry](https://docs.gitlab.com/user/packages/container_registry/) is a part of the GitLab suite, offering easy integration with GitLab's CI/CD pipelines.
 It is currently working towards full OCI compliance, making it suitable for teams deeply embedded in the GitLab ecosystem.
@@ -208,7 +208,7 @@ Key features:
 
 ### Cloudsmith
 
-![cloudsmith](/src/assets/blog/2025-04-07-registry-comparison/cloudsmith.png)
+![cloudsmith](../../assets/blog/2025-04-07-registry-comparison/cloudsmith.png)
 
 [Cloudsmith](https://cloudsmith.com/) is a SaaS-based package management solution that supports OCI v1.1, enabling the management of container images alongside other package formats. It includes a unified policy management engine, which simplifies the enforcement of organizational policies across different artifact types. Cloudsmith is particularly useful for complex software distribution scenarios, offering features like ML model tracking.
 
@@ -222,7 +222,7 @@ Key features:
 
 ### Mirantis
 
-![Mirantis](/src/assets/blog/2025-04-07-registry-comparison/mirantis.png)
+![Mirantis](../../assets/blog/2025-04-07-registry-comparison/mirantis.png)
 
 [Mirantis Secure Registry (MSR)](https://www.mirantis.com/software/mirantis-secure-registry/) is an impressive enterprise-grade, private container registry designed to enhance the security and efficiency of any software supply chain.
 Unlike public registries, MSR offers a secure environment for storing, sharing, and managing container images, ensuring that only approved and trusted images are used in your development and production environments.
@@ -246,7 +246,7 @@ Unlike public registries, MSR offers a secure environment for storing, sharing, 
 
 Harbor supports full OCI v2.0 compliance and extends beyond basic container management by including features like vulnerability scanning, image replication, and automatic SBOM generation upon push. It is well-suited for enterprise environments due to its extensive security features and support for various artifact types.
 
-![harbor](/src/assets/blog/2025-04-07-registry-comparison/harbor-cr.png)
+![harbor](../../assets/blog/2025-04-07-registry-comparison/harbor-cr.png)
 
 **Key Features:**
 
@@ -257,7 +257,7 @@ Harbor supports full OCI v2.0 compliance and extends beyond basic container mana
 
 ### Gitea
 
-![gitea](/src/assets/blog/2025-04-07-registry-comparison/gitea.png)
+![gitea](../../assets/blog/2025-04-07-registry-comparison/gitea.png)
 
 [Gitea](https://about.gitea.com/) is a lightweight, open-source platform that integrates a container registry with its code hosting capabilities. It supports basic OCI compliance, allowing users to manage Docker images and Helm charts within the Gitea ecosystem. The registry is suitable for smaller projects or teams already using Gitea for version control. Authentication is facilitated through personal access tokens, making it easy to manage access to private registries.
 
@@ -270,7 +270,7 @@ Harbor supports full OCI v2.0 compliance and extends beyond basic container mana
 
 ### GitHub Container Registry
 
-![github](/src/assets/blog/2025-04-07-registry-comparison/ghcr.png)
+![github](../../assets/blog/2025-04-07-registry-comparison/ghcr.png)
 
 [GitHub Container Registry (GHCR)](https://docs.github.com/en/packages/working-with-a-github-packages-registry/working-with-the-container-registry) is GitHub's OCI-compliant registry service that works alongside GitHub Packages.
 It's optimized for users already managing code and automation through GitHub, supporting fine-grained permissions via GitHub repositories and GitHub Actions for publishing and consuming container images.
@@ -286,7 +286,7 @@ It is best used for open source images
 
 ### Docker Hub
 
-![docker hub](/src/assets/blog/2025-04-07-registry-comparison/docker-hub.png)
+![docker hub](../../assets/blog/2025-04-07-registry-comparison/docker-hub.png)
 
 [Docker Hub](https://hub.docker.com/) is the default public registry for Docker images and one of the most widely used registries in the container ecosystem.
 It's deeply integrated with the Docker CLI and provides a huge catalog of public images from official vendors and community publishers.
@@ -315,7 +315,7 @@ This is where purpose-built external registries like Distr come in, addressing t
 
 ### Distr
 
-![Distr OCI registry](/src/assets/blog/2025-04-07-registry-comparison/distr-cr.png)
+![Distr OCI registry](../../assets/blog/2025-04-07-registry-comparison/distr-cr.png)
 
 [Distr](https://distr.sh/) comes with an OCI-compliant [artifact registry](https://distr.sh/docs/product/registry/) natively built into the platform.
 
