--- a/src/content/blog/distr-docker-swarm.mdx
+++ b/src/content/blog/distr-docker-swarm.mdx
@@ -21,7 +21,7 @@ We build an Open Source Software Distribution platform called Distr ([`github.co
 
 If you've ever thought that **Docker Compose** is too basic for your deployment needs, but a full **Kubernetes** setup feels like overkill, you're definitely not alone.
 
-<hr>
+<hr />
 
 Luckily, Docker has come up with a solution just for this: Docker Swarm.
 This tool lets you connect multiple Docker daemons to create a Swarm cluster, giving you access to distributed computing features.
@@ -68,11 +68,11 @@ Today, we're excited to announce that **Docker Swarm support has officially land
 
 To enable Docker Swarm support, the steps are simple.
 First, you need to be signed in to Distr.
-If you don't have an account yet, you can <SignupLink text={'sign up for free'} />.
-After [enabling Swarm mode](#about-docker-swarm), all you need to do is to check the box labeled “Swarm mode” when adding a deployment, and you're good to go!
+If you don't have an account yet, you can [sign up for free](/get-started/).
+After [enabling Swarm mode](#about-docker-swarm), all you need to do is to check the box labeled "Swarm mode" when adding a deployment, and you're good to go!
 Keep in mind that you currently can't enable or disable Swarm mode for existing deployments due to some limitations in the underlying Docker system.
 
-![Screenshot of Distr showing a deployment with Swarm mode enabled](/src/assets/blog/2025-05-20-distr-docker-swarm/swarm-mode-screenshot.png)
+![Screenshot of Distr showing a deployment with Swarm mode enabled](../../assets/blog/2025-05-20-distr-docker-swarm/swarm-mode-screenshot.png)
 
 Once Swarm mode is turned on, the Distr Docker Agent will use the Docker Stack API to deploy your application's Compose file.
 It will also use the Docker Service API to monitor your application's health metrics and log streams (coming soon).
