--- a/src/content/blog/distr-docs.mdx
+++ b/src/content/blog/distr-docs.mdx
@@ -30,7 +30,7 @@ But for Distr, we decided to switch to Starlight.
 In this blog post, we will compare Docusaurus and Starlight and explain why we made the switch.
 Additionally, we will share how we structured our technical documentation and what we learned along the way.
 
-<hr>
+<hr />
 
 This post is actually the last piece of the Distr launch week.
 
@@ -210,7 +210,7 @@ Here, we address questions such as "What exactly is Distr?", "Who is it built fo
   className="app-frame mac dark borderless shadow--tl"
   data-url="distr.sh/docs/getting-started/what-is-distr/">
   ![Screenshot of the Distr
-  docs](/src/assets/blog/2025-05-23-distr-docs/9e0436c7-839a-40b5-8e0a-073cd80d6adf.png)
+  docs](../../assets/blog/2025-05-23-distr-docs/9e0436c7-839a-40b5-8e0a-073cd80d6adf.png)
 </div>
 
 Afterward, users are prompted to move on to the **Use Cases** section.
@@ -220,7 +220,7 @@ Ideally, this is the stage where users identify scenarios similar to their own d
   className="app-frame mac dark borderless shadow--tl"
   data-url="distr.sh/docs/use-cases/fully-self-managed/">
   ![Screenshot of the Distr
-  docs](/src/assets/blog/2025-05-23-distr-docs/3744fe91-c12d-470e-affe-537d59748ee3.png)
+  docs](../../assets/blog/2025-05-23-distr-docs/3744fe91-c12d-470e-affe-537d59748ee3.png)
 </div>
 
 Only then do we guide the user to the detailed technical insights and precise implementation instructions found in the **Guides and Product** sections.
@@ -229,7 +229,7 @@ Only then do we guide the user to the detailed technical insights and precise im
   className="app-frame mac dark borderless shadow--tl"
   data-url="distr.sh/docs/product/registry/">
   ![Screenshot of the Distr
-  docs](/src/assets/blog/2025-05-23-distr-docs/0f1c1850-4be4-4421-a6fa-ae31fc1adad6.png)
+  docs](../../assets/blog/2025-05-23-distr-docs/0f1c1850-4be4-4421-a6fa-ae31fc1adad6.png)
 </div>
 
 Additionally, we offer complementary documentation for self-hosting Distr itself.
@@ -241,7 +241,7 @@ We also provide detailed resources on integrations, including how to leverage ou
 Planning how your documentation should ideally be consumed is one thing, but understanding how it actually plays out in reality is another.
 By leveraging PostHog to monitor our documentation's usage metrics, we've observed something probably obvious.
 
-![](/src/assets/blog/2025-05-23-distr-docs/79865ecd-32a3-41b5-9c2e-d3eb3c4d5bea.png)
+![](../../assets/blog/2025-05-23-distr-docs/79865ecd-32a3-41b5-9c2e-d3eb3c4d5bea.png)
 
 People read the documentation often like a book, starting from the beginning and working their way through.
 So if there is any information you want them to read, make sure to put it at the beginning of the documentation.
@@ -256,7 +256,7 @@ When we write docs, we really try to remove unnecessary fluff and filler words a
 Every sentence should be in service to the user's ability to quickly understand what your product does and, most importantly, how it solves the user's specific problems.
 Fighting to retain attention is tough for any medium, but documentation writers have it the hardest since this is the prevailing sentiment they are up against.
 
-![Screenshot of the Distr doc](/src/assets/blog/2025-05-23-distr-docs/cbdd8528-bf64-433d-aaea-7e7d5a7b6c37.webp)
+![Screenshot of the Distr doc](../../assets/blog/2025-05-23-distr-docs/cbdd8528-bf64-433d-aaea-7e7d5a7b6c37.webp)
 
 Making an effort to be clear, concise, and highly reliable has its payoffs though, since it doesn't just help the human readers,
 but it also ensures that docs are structured in such a way that AI models can reliably interpret and communicate accurate information on your behalf.
@@ -267,7 +267,7 @@ That's why we pair concise explanations with detailed, annotated screenshots and
 <div
   className="app-frame mac dark borderless shadow--tl"
   data-url="distr.sh/docs/product/vendor-portal/">
-  ![](/src/assets/blog/2025-05-23-distr-docs/1cf9c44f-50dd-462c-881b-f7bd70f88473.png)
+  ![](../../assets/blog/2025-05-23-distr-docs/1cf9c44f-50dd-462c-881b-f7bd70f88473.png)
 </div>
 
 ## Conclusion
