--- a/src/content/glossary/kubernetes.mdx
+++ b/src/content/glossary/kubernetes.mdx
@@ -24,7 +24,7 @@ At its core, Kubernetes is built around a set of basic objects, such as Pods, Se
 
 Structurally, Kubernetes follows a master-worker architecture, where the control plane manages the cluster, and nodes (workers) run the applications. The control plane handles scheduling, state management, and communication, ensuring that desired states for applications are met.
 
-![kubernetes-cluster-architecture](/src/assets/glossary/kubernetes-cluster-architecture.png)
+![kubernetes-cluster-architecture](../../assets/glossary/kubernetes-cluster-architecture.png)
 
 Kubernetes uses object abstraction to manage workloads, networking, storage, and more. As a technology, Kubernetes is complex, the systems complexity stems from the large number of objects and the steep learning curve involved in configuring and using them effectively.
 
