--- a/src/content/blog/distr-tutorials.mdx
+++ b/src/content/blog/distr-tutorials.mdx
@@ -16,6 +16,10 @@ tags:
   - onboarding
 ---
 
+import ThemedImage from '~/components/util/ThemedImage.astro';
+import tutorialsLight from '../../assets/blog/2025-05-19-tutorials/tutorials-light.png';
+import tutorialsDark from '../../assets/blog/2025-05-19-tutorials/tutorials-dark.png';
+
 # Easy Onboarding with Distr Tutorials
 
 Today is international onboarding day! It's not an official holiday (yet), but we are declaring it so.
@@ -51,7 +55,11 @@ We split up the onboarding process into smaller, more manageable steps, based on
 - Getting started with Distr Agents and Release Automation
 - Getting started with the Registry
 
-![Distr Onboarding Tutorials](/src/assets/blog/2025-05-19-tutorials/tutorials-dark.png)
+<ThemedImage
+  alt="Distr Onboarding Tutorials"
+  lightSrc={tutorialsLight}
+  darkSrc={tutorialsDark}
+/>
 
 Find more information about the tutorials in the [Distr quickstart](https://distr.sh/docs/getting-started/quickstart/).
 
